# Inferno-MLaaS

./: .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: cd.yml  ci.yml
api/: main.py
github/workflows/: cd.yml  ci.yml
infra/: ecs.tf  main.tf  network.tf  outputs.tf  variables.tf
scripts/: train.py
tests/: test_api.py
