[tool.poetry]
name = "inferno-mlaas"
version = "0.1.0"
description = "Machine Learning as a Service platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "inferno_mlaas"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
scikit-learn = "^1.3.0"
joblib = "^1.3.2"
boto3 = "^1.29.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
s3fs = "^2023.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.25.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "scripts.dev:main"